@startuml
skinparam classAttributeIconSize 0

' Types and Enums
interface Card {
  +name: CardName
  +value: number
  +color: CardColor
  +owner: string
  +visibility: CardVisibility
}

enum CardColor {
  HEARTS = "HEARTS"
  DIAMONDS = "DIAMONDS"
  CLUBS = "CLUBS"
  SPADES = "SPADES"
}

enum CardName {
  two = "two"
  three = "three"
  four = "four"
  five = "five"
  six = "six"
  seven = "seven"
  eight = "eight"
  nine = "nine"
  ten = "ten"
  jack = "jack"
  queen = "queen"
  king = "king"
  ace = "ace"
}

enum CardVisibility {
  player = "player"
  none = "none"
  all = "all"
}

enum Symbols {
  Bar = 1
  Cherry = 2
  DoubleBar = 3
  Bell = 4
  Horseshoe = 5
  Star = 6
  Clover = 7
  Wild = 8
  Diamond = 9
  Seven = 10
}

enum BlackjackPhase {
  WAITING = "WAITING"
  BETTING = "BETTING"
  PLAYING = "PLAYING"
  DEALER_TURN = "DEALER_TURN"
  FINISHED = "FINISHED"
}

enum GamePhase {
  pre-flop
  flop
  turn
  river
  showdown
}

' Classes
class EventEmitter {
}

class Game<T extends Player = Player> {
  #players: T[]
  -gameId: string
  +constructor(gameId: string)
  +getGameId(): string
  +addPlayer(player: T): void
  +getPlayers(): T[]
  +removePlayer(playerId: string): void
}

class SinglePlayerGame<T extends Player = Player> {
  -gameId: string
  #player: T
  +constructor(gameId: string, player: T)
  +getGameId(): string
  +getPlayer(): T | null
}

class Slotmachine {
  -slots: Symbols[][]
  -lastWin: number = 0
  -winningLines: number[]
  {static} -MATCH_MULTIPLIERS: Record<number, number>
  {static} +WIN_LINES: number[][][]
  {static} -SYMBOLS: Record<number, { mult: number, weight: number }>
  +constructor(gameId: string, player: SlotmachinePlayer)
  +getSlots(): Symbols[][]
  +getLastWin(): number
  +getWinningLines(): number[]
  +startGame(): void
  -nextRound(): void
  +playRound(): void
  -spin(): void
  -checkSpin(): void
  +handleMove(): void
}

class CardGame<T extends CardGamePlayer = CardGamePlayer> {
  +constructor(gameId: string)
  +setDefaultDealerChip(): void
  #updateDealerChip(): void
}

class Poker {
  {static} +MAX_PLAYER_COUNT: number = 5
  {static} +PLAYER_CARDS_NUMBER: number = 2
  {static} +POKER_CARDS_NUMBER: number = 5
  {static} +POKER_DESK_ID: string = "PokerDesk"
  -pokerDeck: PokerDeck
  -board: Card[]
  -defaultBet: number = 10
  -currentBet: number
  -pot: number
  -phase: GamePhase
  -currentPlayerIndex: number
  -isStarted: boolean
  -hasActedThisRound: Set<string>
  -lastWinners: { id: string, handName: string }[]
  -isLoading: boolean
  -turnTimer: NodeJS.Timeout | null
  -turnEndTime: number | null
  -TURN_TIMEOUT_MS: number = 10000
  -gameStartTimer: NodeJS.Timeout | null
  -gameStartEndTime: number | null
  -GAME_START_DELAY_MS: number = 10000
  +constructor(gameId: string)
  +handlePlayerDisconnect(playerId: string): void
  +tipDealer(playerId: string): Promise<any>
  +startGameStartTimer(): void
  -startTurnTimer(): void
  -stopTurnTimer(): void
  +startGame(): void
  -startNewHand(isFirstHand: boolean): void
  -resetPlayers(): void
  -handCardsOut(): void
  -setInitialBlinds(): void
  -nextPhase(): void
  -reveal(count: number): void
  -checkPlayersHands(): void
  -resetBettingRound(): void
  -handleShowdown(): void
  +handlePlayerMove(playerId: string, action: string, amount?: number): Promise<any>
  -moveToNextActivePlayer(): void
  -isRoundFinished(): boolean
  +getGameState(): any
  -getHandName(value: number): string
}

class Blackjack {
  {static} +PLAYER_CARDS_NUMBER: number = 2
  {static} +BLACKJACK_BOT_ID: string = "BlackjackBot"
  -blackjackDeck: BlackjackDeck
  -blackJackBot: BlackjackBot
  -isRunning: boolean
  -currentPhase: BlackjackPhase
  -currentPlayerId: string | null
  +constructor(gameId: string)
  +startGame(): Promise<void>
  +stopGame(): void
  -playRound(): Promise<void>
  -dealerPlay(): void
  -handCardsOut(): void
  -resetCards(): void
  -checkHandsValue(): void
  +removePlayer(playerId: string): void
  -makeMove(): Promise<void>
  -waitForBets(): Promise<void>
  +handlePlayerMove(playerId: string, action: string, amount?: number): any
  +getGameState(): any
  -resetBets(): void
  -handOutWin(): void
}

class BlackjackBot {
  -cards: Card[]
  -handValue: number
  +constructor()
  +getCards(): Card[]
  +getHandValue(): number
  +addCard(card: Card): void
  +revealCards(): void
  -checkHandValue(): void
  +makesHit(): boolean
  +hasBlackJack(): boolean
  +clearHand(): void
}

class Player {
  -playerId: string
  -username: string
  -displayname: string
  -balance: number
  -bet: number
  -desiredBet: number = 0
  +constructor(playerId: string, username: string, \n  displayname: string, balance: number)
  +getPlayerId(): string
  +getUsername(): string
  +getDisplayname(): string
  +getBalance(): number
  +getBet(): number
  +getDesiredBet(): number
  +setDesiredBet(desiredBet: number): boolean
  +makeBet(): void
  +makeNewBet(bet: number): void
  +makeIncreasedBet(bet: number): void
  +winMoney(win: number): void
  +makeTip(amount: number): void
  {static} +xNextPlayer(players: Player[], i: number, x: number): number
  {static} +nextPlayer(players: Player[], i: number): number
  +isOutOfMoney(): boolean
  +updatePlayerInfo(username: string, displayname: string): void
}

class SlotmachinePlayer {
  -pressedSpin: boolean
  -pressedAutoSpin: boolean
  +constructor(playerId: string, username: string, \n  displayname: string, balance: number)
  +getPressedSpin(): boolean
  +getPressedAutoSpin(): boolean
  +userPressedSpin(): void
  +userPressedAutoSpin(): void
  +stopAutoSpin(): void
  +setBet(bet: number): void
  -resetActions(): void
}

class CardGamePlayer {
  #cards: Card[]
  -hasDealerChip: boolean
  #madeMove: boolean
  +constructor(playerId: string, username: string, \n  displayname: string, balance: number)
  +getCards(): Card[]
  +getDealerChip(): boolean
  +getMadeMove(): boolean
  +setDealerChip(hasDealerChip: boolean): void
  +resetMadeMove(): void
  +addCard(card: Card): void
  {static} +playerWithDealerChip(players: CardGamePlayer[]): number
  +clearHand(): void
}

class PokerPlayer {
  -pressedFold: boolean = false
  -pressedCheck: boolean = false
  -pressedBet: boolean = false
  -pressedCall: boolean = false
  -pressedRaise: boolean = false
  -valueOfHand: number[]
  +constructor(playerId: string, username: string, \n  displayname: string, balance: number)
  +getCardCombinationValue(): number
  +getValueOfCardCombination(): number
  +setFolded(folded: boolean): void
  +isFolded(): boolean
  +getPressedFold(): boolean
  +getPressedCheck(): boolean
  +getPressedBet(): boolean
  +getPressedCall(): boolean
  +getPressedRaise(): boolean
  +userPressedFold(): void
  +userPressedCheck(): void
  +userPressedBet(): void
  +userPressedCall(): void
  +userPressedRaise(): void
  -resetActions(): void
  +resetMadeMove(): void
  +checkHand(cards: Card[]): void
  -hasRoyalFlush(cards: Card[]): boolean
  -hasStraightFlush(cards: Card[]): boolean
  -hasQuadruple(cards: Card[]): boolean
  -hasFullHouse(cards: Card[]): boolean
  -hasFlush(cards: Card[]): boolean
  -hasStraight(cards: Card[]): boolean
  -hasTripple(cards: Card[]): boolean
  -hasTwoPair(cards: Card[]): boolean
  -hasPair(cards: Card[]): boolean
  +getHighCard(cards: Card[]): void
  -getPlayerHighCard(): number
  -getPlayerLowCard(): number
  +resetHandValue(): void
}

class BlackjackPlayer {
  -pressedHit: boolean = false
  -pressedStand: boolean = false
  -pressedDouble: boolean = false
  -handValue: number
  +constructor(playerId: string, username: string, \n  displayname: string, balance: number)
  +getHandValue(): number
  +getPressedHit(): boolean
  +getPressedStand(): boolean
  +getPressedDouble(): boolean
  +userPressedHit(): void
  +userPressedStand(): void
  +userPressedDouble(): void
  +addCard(card: Card): void
  -resetActions(): void
  +checkHandValue(): void
}

class Deck {
  {static} +DEALER_ID: string = "Dealer"
  #deck: Card[]
  +constructor()
  #shuffle(cardDeck: Card[]): void
  +dealCard(cardDeck: Card[], id: string): Card
  +getDeck(): Card[]
}

class BlackjackDeck {
  +constructor()
  -blackjackDeckInit(): void
}

class PokerDeck {
  +constructor()
  -pokerDeckInit(): void
}

' Inheritance
EventEmitter <|-- Game
Game <|-- CardGame
CardGame <|-- Poker
CardGame <|-- Blackjack
SinglePlayerGame <|-- Slotmachine
Deck <|-- BlackjackDeck
Deck <|-- PokerDeck
Player <|-- CardGamePlayer
Player <|-- SlotmachinePlayer
CardGamePlayer <|-- PokerPlayer
CardGamePlayer <|-- BlackjackPlayer

' Associations
Game o-- "many" Player : contains
SinglePlayerGame o-- "1" Player : contains
Poker *-- "many" Card : board
CardGamePlayer *-- "many" Card : cards
Deck *-- "many" Card : deck
Poker o-- "1" PokerDeck : uses
Blackjack o-- "1" BlackjackDeck : uses
Blackjack *-- "1" BlackjackBot : blackJackBot
BlackjackBot *-- "many" Card : cards
Slotmachine *-- "many" Symbols : slots

@enduml
